# Not sure if this will work but it should include the buildtree dir.
buildtreedir = ${pkgdata}/buildtree-0022
nobase_dist_buildtree_DATA = \
   include/wiring.h \
   include/Servo.h \
   include/Stream.h \
   include/ArduinoTestSuite.h \
   include/binary.h \
   include/WCharacter.h \
   include/Matrix.h \
   include/SD.h \
   include/WString.h \
   include/EEPROM.h \
   include/Boards.h \
   include/WConstants.h \
   include/SoftwareSerial.h \
   include/Client.h \
   include/Firmata.h \
   include/pins_arduino.h \
   include/Sprite.h \
   include/avr_cpunames.h \
   include/utility \
   include/utility/Sd2PinMap.h \
   include/utility/FatStructs.h \
   include/utility/SdFatUtil.h \
   include/utility/SdFat.h \
   include/utility/SdInfo.h \
   include/utility/Sd2Card.h \
   include/Udp.h \
   include/HardwareSerial.h \
   include/Wire.h \
   include/Print.h \
   include/Ethernet.h \
   include/Server.h \
   include/Stepper.h \
   include/LiquidCrystal.h \
   include/WProgram.h \
   include/SPI.h \
   src/SD \
   src/SD/SD.cpp \
   src/SD/README.txt \
   src/SD/utility \
   src/SD/utility/SdFatmainpage.h \
   src/SD/utility/SdFile.cpp \
   src/SD/utility/Sd2Card.cpp \
   src/SD/utility/SdVolume.cpp \
   src/SD/Makefile \
   src/SD/File.cpp \
   src/Sprite \
   src/Sprite/binary.h \
   src/Sprite/Makefile \
   src/Sprite/Sprite.cpp \
   src/ks0108 \
   src/ks0108/readme.txt \
   src/ks0108/Arial14.h \
   src/ks0108/ks0108_Sanguino.h \
   src/ks0108/ArduinoIcon.h \
   src/ks0108/SystemFont5x7.h \
   src/ks0108/Processing \
   src/ks0108/Processing/glcdBitmap \
   src/ks0108/Processing/glcdBitmap/data \
   src/ks0108/Processing/glcdBitmap/data/ArduinoIcon.bmp \
   src/ks0108/Processing/glcdBitmap/Readme.txt \
   src/ks0108/Processing/glcdBitmap/glcdBitmap.pde \
   src/ks0108/examples \
   src/ks0108/examples/GLCDexample.pde \
   src/ks0108/Makefile \
   src/ks0108/ks0108_Mega.h \
   src/ks0108/ks0108_Panel.h \
   src/ks0108/ks0108_Arduino.h \
   src/ks0108/keywords.txt \
   src/ks0108/ks0108.cpp \
   src/ks0108/ks0108.h \
   src/Wire \
   src/Wire/Wire.cpp \
   src/Wire/utility \
   src/Wire/utility/twi.h \
   src/Wire/utility/twi.c \
   src/Wire/Makefile \
   src/Matrix \
   src/Matrix/Matrix.cpp \
   src/Matrix/Makefile \
   src/SoftwareSerial \
   src/SoftwareSerial/SoftwareSerial.cpp \
   src/SoftwareSerial/Makefile \
   src/Firmata \
   src/Firmata/LICENSE.txt \
   src/Firmata/TODO.txt \
   src/Firmata/Firmata.cpp \
   src/Firmata/Makefile \
   src/LiquidCrystal \
   src/LiquidCrystal/Makefile \
   src/LiquidCrystal/LiquidCrystal.cpp \
   src/ArduinoTestSuite \
   src/ArduinoTestSuite/Makefile \
   src/ArduinoTestSuite/ArduinoTestSuite.cpp \
   src/Stepper \
   src/Stepper/Stepper.cpp \
   src/Stepper/Makefile \
   src/Sprinter \
   src/Sprinter/Configuration.h \
   src/Sprinter/Sprinter.h \
   src/Sprinter/SdFatmainpage.h \
   src/Sprinter/pins.h \
   src/Sprinter/SdFile.cpp \
   src/Sprinter/Sd2Card.cpp \
   src/Sprinter/Sd2PinMap.h \
   src/Sprinter/SdVolume.cpp \
   src/Sprinter/FatStructs.h \
   src/Sprinter/Makefile.orig \
   src/Sprinter/main.cpp \
   src/Sprinter/Makefile \
   src/Sprinter/createTemperatureLookup.py \
   src/Sprinter/Sprinter.pde \
   src/Sprinter/SdFatUtil.h \
   src/Sprinter/SdFat.h \
   src/Sprinter/SdInfo.h \
   src/Sprinter/fastio.h \
   src/Sprinter/Sd2Card.h \
   src/Sprinter/thermistortables.h \
   src/arduino \
   src/arduino/WMath.cpp \
   src/arduino/wiring_private.h \
   src/arduino/Tone.cpp \
   src/arduino/Print.cpp \
   src/arduino/main.cpp \
   src/arduino/Makefile \
   src/arduino/WInterrupts.c \
   src/arduino/pins_arduino.c \
   src/arduino/wiring.c \
   src/arduino/wiring_shift.c \
   src/arduino/wiring_analog.c \
   src/arduino/wiring_pulse.c \
   src/arduino/wiring_digital.c \
   src/arduino/HardwareSerial.cpp \
   src/arduino/WString.cpp \
   src/Ethernet \
   src/Ethernet/Client.cpp \
   src/Ethernet/Udp.cpp \
   src/Ethernet/Ethernet.cpp \
   src/Ethernet/utility \
   src/Ethernet/utility/socket.cpp \
   src/Ethernet/utility/w5100.cpp \
   src/Ethernet/utility/socket.h \
   src/Ethernet/utility/w5100.h \
   src/Ethernet/Makefile \
   src/Ethernet/Server.cpp \
   src/EEPROM \
   src/EEPROM/EEPROM.cpp \
   src/EEPROM/Makefile \
   src/SPI \
   src/SPI/SPI.cpp \
   src/SPI/Makefile \
   src/Servo \
   src/Servo/Servo.cpp \
   src/Servo/Makefile
